--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:300,400,700" />
 	<link rel="stylesheet" type="text/css" href="./jquery.pagepiling.css" />
-	<link rel="stylesheet" type="text/css" href="examples.css" />
+	<link rel="stylesheet" type="text/css" href="./examples/examples.css" />
 	<link rel="stylesheet" type="text/css" href="./CSS/jianli.css" />
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -181,7 +181,7 @@
 	<div id="pagepiling">
 	    <div class="section" id="section1">
 	    	<video autoplay loop muted id="myVideo">
-				<source src="imgs/mountain.mp4" type="video/mp4">
+				<source src="./examples/imgs/mountain.mp4" type="video/mp4">
 			</video>
 		
 <!-- 			
